--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-sticky": "^6.0.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
